<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/background"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_white"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/rectangle_trans"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_white"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/editConPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/rectangle_trans"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/reset_password"
        android:background="@drawable/rectangle_pink"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:layout_margin="20sp"/>
</android.support.constraint.ConstraintLayout>