<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.child_fragment.ChildGalleryFragment">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/headshot_photos"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/grey"
            android:textStyle="bold"/>
        <include layout="@layout/template_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintBottom_toTopOf="@id/guide"/>
        <android.support.constraint.Guideline
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>
        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bts_photos"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/guide"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/grey"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewBTS"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:src="@drawable/fab"
        android:contentDescription="@string/app_name" />
</android.support.constraint.ConstraintLayout>