<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp">


    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/buttonGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/face_book_curves"
            android:src="@drawable/ic_image"
            android:padding="8dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c6c0c0"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/buttonCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusable="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_background"
            android:src="@drawable/ic_menu_camera1"
            android:padding="8dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>

</LinearLayout>