<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText"
    tools:context=".activity.LoginActivity">
    <include layout="@layout/background"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:text="Fill in the email and password your registered with to access your account"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:background="@drawable/rectangle_white">
            <EditText
                android:id="@+id/editEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/rectangle_trans"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_white"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/rectangle_trans"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/buttonForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password ?"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:textAllCaps="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/login"
        android:background="@drawable/rectangle_pink"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:layout_margin="20sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Don't have an Account? "/>
        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:text="SignUp "/>
    </LinearLayout>
    <include layout="@layout/template_progress" />
</android.support.constraint.ConstraintLayout>